--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/redux-thunk": "^2.1.0",
     "antd": "^4.24.1",
     "axios": "^1.1.3",
+    "firebase": "^9.14.0",
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
